Верстка мобильной и планшетной версии страницы форм

--- a/form.html
+++ b/form.html
@@ -30,9 +30,9 @@
     </header>
       <section class="forms">
         <div class="forms__competition">
-          <h1 class="forms__h1">Конкурс на самое безбашеное путешествие с Пинк</h1>
+          <h1 class="forms__h1">Конкурс на самое безбашенное путешествие с Пинк</h1>
         </div>
-        <h2 class="forms__h2">Поделитесь своей историей и получите шанс выиграть ценный приз 1000 миль на вашу бонусную карту!<br><span>Пожалуйста, заполните форму ниже:</span></h2>
+        <h2 class="forms__h2">Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!<br><span>Пожалуйста, заполните форму ниже:</span></h2>
         <form  action="#" method="post">
           <div class="forms__page-forms">
             <div class="forms__name-wrap">
@@ -110,33 +110,35 @@
             </div>
             <div class="forms__wrap forms__wrap--grey forms__wrap--radio">
               <h3 class="forms__textfield-header forms__textfield-header--center">С каким приложением путешествовали?</h2>
-              <div class="forms__item">
-                <input class="forms__radio" id="ios-id" type="radio" name="application" value="ios" checked>
-                <label class="forms__radio-label" for="ios-id">Pink для iOS</label>
-              </div>
-              <div class="forms__item">
-                <input class="forms__radio" id="android-id" type="radio" name="application" value="android">
-                <label class="forms__radio-label" for="android-id">Pink на Android</label>
-              </div>
-              <div class="forms__item">
-                <input class="forms__radio" id="windows-id" type="radio" name="application" value="windows">
-                <label class="forms__radio-label" for="windows-id">Windows Phone</label>
+                <div class="forms__radio-items">
+                  <div class="forms__item forms__item--radio">
+                    <input class="forms__radio" id="ios-id" type="radio" name="application" value="ios" checked>
+                    <label class="forms__radio-label" for="ios-id">Pink для iOS</label>
+                  </div>
+                  <div class="forms__item forms__item--radio">
+                    <input class="forms__radio" id="android-id" type="radio" name="application" value="android">
+                    <label class="forms__radio-label" for="android-id">Pink на Android</label>
+                  </div>
+                  <div class="forms__item forms__item--radio">
+                    <input class="forms__radio" id="windows-id" type="radio" name="application" value="windows">
+                    <label class="forms__radio-label" for="windows-id">Windows Phone</label>
+                  </div>
+                </div>
               </div>
             </div>
-        </div>
-          <div class="forms__wrap forms__wrap--commit">
-            <h3 class="forms__textfield-header forms__textfield-header--center">Опишите свои эмоции</h3>
-            <div class="forms__commit">
-              <textarea class="forms__textarea" name="commit-field" id="textarea-id" rows="12" cols="48"></textarea>
-              <label for="textarea-id">Можно прям в красках, не стесняясь в выражениях</label>
+            <div class="forms__wrap forms__wrap--commit">
+              <h3 class="forms__textfield-header forms__textfield-header--center">Опишите свои эмоции</h3>
+              <div class="forms__commit">
+                <textarea class="forms__textarea" name="commit-field" id="textarea-id" rows="12" cols="48"></textarea>
+                <label for="textarea-id">Можно прям в красках, не стесняясь в выражениях</label>
+              </div>
             </div>
-          </div>
-          <div class="forms__wrap-button">
-            <input class="forms__btn-send" type="submit" name="btn-send" value="Отправить форму">
-            <p class="forms__required-fields"><span>*</span>-обязательные поля</p>
-          </div>
-        </form>
-      </section>
+            <div class="forms__wrap-button">
+              <input class="forms__btn-send" type="submit" name="btn-send" value="Отправить форму">
+              <p class="forms__required-fields"><span>*</span>-обязательные поля</p>
+            </div>
+          </form>
+        </section>
     </main>
     <footer class="main-footer">
       <div class="logo logo--footer"></div>
