--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
       </div>
       <div class="diagram">
-        <h2 class="diagram__h2">Эффект<br>на 24 часа!</h2>
-        <p class="diagram__item">Британские ученые провели исследования и доказали, что положительный эффект<br>от использования приложения длится целые сутки!</p>
+        <h2 class="diagram__h2">Эффект на 24 часа!</h2>
+        <p class="diagram__item">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
         <a class="diagram__link" href="#">Узнать больше об исследовании</a>
       </div>
       <div class="review">
@@ -75,6 +75,7 @@
           <input type="radio" id="btn-1" name="toggle" checked>
           <input type="radio" id="btn-2" name="toggle">
           <input type="radio" id="btn-3" name="toggle">
+          <a class="review__btn-back"></a>
           <div class="slider__inner">
             <div class="slider__slides">
               <div class="review__slide1">
@@ -94,6 +95,7 @@
               </div>
             </div>
           </div>
+          <a class="review__btn-next"></a>
           <div class="slider__controls">
             <label for="btn-1"></label>
             <label for="btn-2"></label>
