--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
         <div class="forms__competition">
           <h1 class="forms__h1">Конкурс на самое безбашенное путешествие с Пинк</h1>
         </div>
-        <h2 class="forms__h2">Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!<br><span>Пожалуйста, заполните форму ниже:</span></h2>
+        <h2 class="forms__h2">Поделитесь своей историей и получите шанс выиграть ценный приз &mdash; 1000 миль на вашу бонусную карту! <span>Пожалуйста, заполните форму ниже:</span></h2>
         <form  action="#" method="post">
           <div class="forms__page-forms">
             <div class="forms__name-wrap">
@@ -59,7 +59,7 @@
               </div>
             </div>
             <div class="forms__wrap forms__wrap--grey forms__wrap--checkbox">
-              <h3 class="forms__textfield-header forms__textfield-header--center">Ваши безбашенные достижения в путешествии</h3>
+              <h3 class="forms__textfield-header forms__textfield-header--center forms__textfield-header--checkbox">Ваши безбашенные достижения в путешествии</h3>
               <div class="forms__checkbox-items">
                 <div class="forms__item">
                   <input class="forms__checkbox" id="selfie-id" type="checkbox" name="selfie" checked>
@@ -93,17 +93,17 @@
                 <div class="forms__textfield forms__textfield--bottom">
                   <h3 class="forms__textfield-header forms__textfield-header--hidden">Номерок телефончика</h3>
                   <h3 class="forms__textfield-header forms__textfield-header--normal">Номер телефона</h3>
-                  <div class="forms__input-item">
+                  <div class="forms__input-item forms__input-item--telephone">
                     <input class="forms__input-text" type="text" name="telephone" id="telephone-id">
-                    <label class="forms__label" class="forms__label" for="telephone-id">Номер, пожалуйста</label>
+                    <label class="forms__label" for="telephone-id">Номер, пожалуйста</label>
                   </div>
                 </div>
                 <div class="forms__textfield forms__textfield--bottom ">
                   <h3 class="forms__textfield-header forms__textfield-header--hidden">Адресок почты</h3>
                   <h3 class="forms__textfield-header forms__textfield-header--normal">Адрес почты</h3>
-                  <div class="forms__input-item">
+                  <div class="forms__input-item forms__input-item--mail">
                     <input class="forms__input-text" type="text" name="mail" id="mail-id">
-                    <label class="forms__label" class="forms__label" for="mail-id">Введите почту</label>
+                    <label class="forms__label" for="mail-id">Введите почту</label>
                   </div>
                 </div>
               </div>
@@ -127,7 +127,7 @@
               </div>
             </div>
             <div class="forms__wrap forms__wrap--commit">
-              <h3 class="forms__textfield-header forms__textfield-header--center">Опишите свои эмоции</h3>
+              <h3 class="forms__textfield-header forms__textfield-header--center forms__textfield-header--commit">Опишите свои эмоции</h3>
               <div class="forms__commit">
                 <textarea class="forms__textarea" name="commit-field" id="textarea-id" rows="12" cols="48"></textarea>
                 <label for="textarea-id">Можно прям в красках, не стесняясь в выражениях</label>
@@ -135,7 +135,7 @@
             </div>
             <div class="forms__wrap-button">
               <input class="forms__btn-send" type="submit" name="btn-send" value="Отправить форму">
-              <p class="forms__required-fields"><span>*</span>-обязательные поля</p>
+              <p class="forms__required-fields"><span class="forms__star">*</span> &ndash; обязательные <span class="forms__text">для заполнения</span> поля</p>
             </div>
           </form>
         </section>
