--- a/photo.html
+++ b/photo.html
@@ -32,21 +32,21 @@
       <div class="forms__competition">
         <h1 class="forms__h1">Фотографии<br>пользователей</h1>
       </div>
-      <h2 class="forms__h2">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</span></h2>
+      <h2 class="photo__h2">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</span></h2>
       <section class="photo">
         <div class="photo__item photo__item--first">
           <img class="photo__image photo__image--grow" src="./img/panorama-mobile@1x.jpg" width="280" height="180">
           <div class="photo__commit photo__commit--first">
             <p class="photo__user-name">Анна <span class="photo__time">(5 минут назад)</span></p>
-            <p class="photo__text-commit">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы</p>
-            <p class="photo__like">Нравится: 215</p>
+            <p class="photo__text-commit">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+            <p class="photo__like photo__like--first">Нравится: 215</p>
           </div>
         </div>
         <div class="photo__wrap">
           <div class="photo__item">
             <img class="photo__image" src="./img/photo-1-mobile@1x.jpg" width="280" height="180">
             <div class="photo__commit">
-              <p class="photo__user-name">Левон <span class="photo__time">(5 минут назад)</span></p>
+              <p class="photo__user-name">Левон <span class="photo__time">(5 часов назад)</span></p>
               <p class="photo__text-commit">Вчера он на луну летал, сегодня в руки к нам попал.</p>
               <p class="photo__like">Нравится: 356</p>
             </div>
@@ -93,7 +93,7 @@
           </div>
         </div>
       </section>
-      <h2 class="forms__h2">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</h2>
+      <h2 class="photo__h2">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</h2>
       <div class="upload-image">
 	  	<div class="upload-image__wrap-image">
 			<img class="photo__image photo__image--upload" src="./img/photo-7-mobile@1x.jpg" width="280" height="180">
@@ -108,7 +108,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="upload-image__scale-item">	
+				<div class="upload-image__scale-item">
 					<a class="upload-image__filter upload-image--fill" href="#">Заливка</a>
 					<div class="upload-image__scale upload-image__scale--fill">
 					  <div class="upload-image__scale-image">
@@ -116,7 +116,7 @@
 					  </div>
 					</div>
 				</div>
-				<div class="upload-image__scale-item">	
+				<div class="upload-image__scale-item">
 					<a class="upload-image__filter upload-image--contrast" href="#">Контраст</a>
 					<div class="upload-image__scale upload-image__scale--contrast">
 					  <div class="upload-image__scale-image">
@@ -131,7 +131,7 @@
 			  </div>
 			</div>
 			<div class="upload-image__wrap-button">
-				<form action="#" method="post">
+				<form class="upload-image__form" action="#" method="post">
 					<input class="upload-image__btn upload-image__btn--active" type="submit" name="btn-upload" value="Запостить">
 					<button class="upload-image__btn upload-image__btn--disabled">Отмена</button>
 				</form>
