Исправление страницы фотографий

--- a/photo.html
+++ b/photo.html
@@ -96,8 +96,8 @@
       <div class="forms__competition">
         <h1 class="forms__h1">Фотографии пользователей</h1>
       </div>
-      <h2 class="photo__h2">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</span></h2>
       <section class="photo">
+        <h2 class="photo__h2">Взгляните на фотографии, которые выкладывают пользователи! Видите,&nbsp;как не хватает ваших?</span></h2>
         <div class="photo__item photo__item--first">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
@@ -185,7 +185,8 @@
           </div>
         </div>
       </section>
-      <h2 class="photo__h2">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</h2>
+      <h2 class="photo__h2">Затмите их всех!</h2>
+      <h2 class="photo__h2">Выкладывайте все, что накопилось в телефоне!</h2>
       <div class="upload-image">
 	  	<div class="upload-image__wrap-image">
 		  <picture>
